--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div class="todo-app">
-            <h3>To-Do List <img src="todo.png" ></h3>
+            <h3>To-Do List <img src="./todo.png" ></h3>
             <div class="row">
                 <input type="text" id="input-box" placeholder="Add your text">
                 <button onclick="addTask()">Add</button>
